<resources>
    <string name="app_name">约个球</string>
    <!--主界面nvigationView 的menu内容-->
    <string name="nav_chat_string">聊天</string>
    <string name="nav_friends_string">好友</string>
    <string name="nav_find_string">发现</string>
    <string name="nav_news_string">资讯</string>
    <string name="nav_setting_string">设置</string>
    <!--openIM-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quit_confirm">退出后您将收不到新消息通知，是否确认退出？</string>
    <string name="guest_login">账号不存在，是否以游客方式登录？</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="setting_sound">声音提醒</string>
    <string name="setting_vibration">振动提醒</string>
    <string name="setting_nodisturb_dsc">消息免打扰</string>
    <string name="title_activity_test_activity1">TestActivity1</string>
    <string name="title_activity_test_activity2">TestActivity2</string>
    <string name="title_activity_tribe_members">TribeMembersActivity</string>
    <string name="title_activity_tribe_info">TribeInfoActivity</string>
    <string name="title_activity_seacher_tribe">SeacherTribeActivity</string>
    <string name="title_activity_edit_tribe_info">EditTribeInfoActivity</string>
    <string name="title_activity_invite_tribe_member">InviteTribeMemberActivity</string>
    <string name="search_friend_hint">账号</string>
    <string name="search">搜索</string>
    <string name="net_null">哎呀，怎么没网络了，请联网后试试！</string>
    <string name="search_friend_not_found">该用户不存在</string>
    <string name="search_friend_not_found_message">无法找到该用户，请检查输入的帐号是否正确</string>
    <string name="search_friend_processing">正在为您查找</string>
    <string name="send_msg">发送消息</string>
    <string name="add_friend">添加好友</string>
    <string name="remark_name">昵 称: </string>
    <string name="profile_account">账 号: </string>
    <string name="title_activity_system_message">SystemMessageActivity</string>
    <string-array name="pref_config_tcms_storage_titles">
        <item>In Settings(public)</item>
        <item>In externalStorage(public)</item>
        <item>In preference(private)</item>
    </string-array>
    <string-array name="pref_config_tcms_storage_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="pref_header_general">测试设置</string>
    <string name="title_activity_contact_setting">ContactSettingActivity</string>
    <string name="title_activity_tribe_msg_rec_type_set">TribeMsgRecTypeSetActivity</string>


    <string name="action_about">关于</string>
    <string name="loginOrRegister">登陆/注册</string>
    <string name="go">确定</string>
    <string name="userName">用户名</string>
    <string name="next">下一步</string>
    <string name="pwd">密码</string>
    <string name="repeatPwd">重复密码</string>
    <string name="register">注册</string>
    <string name="login">登陆</string>
    <string name="souvenir">恋恋日记</string>
    <string name="baby_slogan">Baby\n只为更好的懂你</string>
    <string name="editInfo">编辑个人信息</string>
    <string name="nick">昵称</string>
    <string name="city">居住地</string>
    <string name="sex">性别</string>
    <string name="tips">另一半的用户名（不是昵称哦）</string>
    <string name="commit">提交</string>
    <string name="idea">这一刻的想法...</string>
    <string name="fetchPic">获取相片</string>
    <string name="upload">上传</string>
    <string name="news">通知</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="txt_moments">朋友圈</string>
    <string name="txt_nearby">附近的人</string>
    <string name="txt_scan">扫一扫</string>
    <string name="txt_shake">摇一摇</string>


    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_error_title">Sorry</string>

    <string name="empty_ribots">There aren\'t any friends</string>
    <string name="error_loading_ribots">There was a problem loading the friends</string>

    <string name="drawer_chatting">聊天</string>
    <string name="drawer_friends">好友</string>
    <string name="drawer_nearby">附近</string>
    <string name="drawer_news">资讯</string>
    <string name="drawer_setting">设置</string>

    <string name="reload_hint">加载数据失败，点击重新加载</string>
    <string name="common_loading_message">正在加载中...</string>
    <string name="common_empty_msg">抱歉,暂未获取到数据!\n请点击屏幕重试~</string>
    <string name="common_error_msg">抱歉,系统出错了!\n请点击屏幕重试~</string>
    <string name="common_no_network_msg">暂未连接上网络!\n请连接后点击屏幕重试~</string>
    <string name="cpb_default_rotation_speed">1</string>
    <string name="cpb_default_sweep_speed">1</string>


    <string name="drag_tip">长按编辑,拖拽排序</string>
    <string name="my_channel">我的频道</string>
    <string name="other_channel">其他频道</string>
    <string name="edit">编辑</string>
    <string name="finish">完成</string>

    <string name="swipe_left">left</string>
    <string name="swipe_right">right</string>
    <string name="view_swiped_left">%1$s swiped to left!</string>
    <string name="view_swiped_right">%1$s swiped to right!</string>
    <string name="reset">Reset stack</string>
    <string name="stack_reset">Stack reset!</string>
    <string name="stack_empty">Card stack empty!</string>
    <string name="dummy_text">Test</string>
    <string name="dummy_add">AddTest</string>
</resources>
