<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="@string/nav_chat_string" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_friends_string" />
        <item
            android:id="@+id/nav_find"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/nav_find_string" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_input_black_24dp"
            android:title="@string/nav_news_string" />

    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/nav_setting_string" />
    </group>

</menu>
