<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_friendCircle"
                style="@style/TxtTitle"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@drawable/icon_friend_circle"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/txt_moments"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />


            <TextView
                android:id="@+id/txt_scan"
                style="@style/TxtTitle"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@drawable/icon_scan"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/txt_scan"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />

            <TextView
                android:id="@+id/txt_shake"
                style="@style/TxtTitle"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@drawable/icon_shake"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/txt_shake"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />

            <TextView
                android:id="@+id/txt_nearby"
                style="@style/TxtTitle"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@drawable/icon_nearby"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/txt_nearby"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>